--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,39 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hillbilly.kidslauncher">
 
     <application
-        android:launchMode="singleTask"
-        android:clearTaskOnLaunch="true"
-        android:stateNotNeeded="true"
         android:allowBackup="true"
-        android:label="@string/app_name"
+        android:clearTaskOnLaunch="true"
         android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:launchMode="singleTask"
+        android:stateNotNeeded="true"
         android:theme="@style/AppTheme">
         <activity
-            android:screenOrientation="portrait"
+            android:name=".MainActivity"
             android:excludeFromRecents="true"
             android:launchMode="singleTask"
-            android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo.Wallpaper.NoTitleBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.HOME" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name=".AppsListActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity
+            android:name=".PhoneBook"
+            android:label="@string/title_activity_phone_book"></activity>
 
-        <activity android:name=".AppsListActivity"></activity>
-        <activity android:name=".LoginActivity"></activity>
-
+        <provider
+            android:name=".KidsContentProvider"
+            android:authorities="com.hillbilly.kidslauncher.provider"
+            android:enabled="true"
+            android:exported="false"></provider>
     </application>
-
-
 
 </manifest>
